<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:background="@color/common_background" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" android:padding="@dimen/common_margin">

    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:paddingBottom="5dp" android:paddingTop="5dp">

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/asset_asset_activity_asset_records170" android:textColor="@color/common_hint"/>

        <TextView android:id="@+id/type" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" tools:text="@string/asset_asset_item_asset_records60"/>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:paddingBottom="5dp" android:paddingTop="5dp">

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/asset_asset_activity_withdraw190" android:textColor="@color/common_hint"/>

        <TextView android:id="@+id/count" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" tools:text="-1000USDT"/>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:paddingBottom="5dp" android:paddingTop="5dp">

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/asset_asset_item_asset_records180" android:textColor="@color/common_hint"/>

        <TextView android:id="@+id/time" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_weight="1" android:layout_width="0dp" android:textColor="@color/common_text" tools:text="2018/05/15 15:11"/>

    </LinearLayout>

</LinearLayout>
