<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">

    <com.sskj.common.view.ToolBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:background_color="@color/common_action_bar"
        app:title="@string/asset_asset_activity_insert_address200"
        app:right_text_color="@color/common_text_sun"
        app:title_color="@color/common_text" />


    <com.allen.library.SuperTextView
        android:id="@+id/select_coin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        app:sBackgroundDrawableRes="@color/common_white"
        app:sDividerLineColor="@color/common_divider"
        app:sDividerLineType="top"
        app:sLeftTextColor="@color/common_text"
        app:sLeftTextSize="@dimen/sp_16"
        app:sLeftTextString="@string/asset_asset_activity_recharge40"
        app:sLeftViewMarginLeft="0dp"
        app:sRightTextColor="@color/common_hint"
        app:sRightTvDrawableRight="@mipmap/common_arrow_right" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/asset_asset_activity_withdraw60"
        android:textColor="@color/common_hint"
        android:textSize="@dimen/sp_14" />


    <TextView
        android:id="@+id/useful_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_edt_line_bg"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:paddingBottom="12dp"
        android:text="0.0000BTC"
        android:textColor="@color/common_text"
        android:textColorHint="@color/common_text"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingTop="20dp"
        android:text="@string/asset_asset_activity_address_list20"
        android:textColor="@color/common_hint"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">


        <EditText
            android:id="@+id/address_edt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/asset_asset_activity_withdraw140"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/common_text"
            android:textColorHint="@color/common_hint"
            android:textSize="14sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:background="@color/common_divider" />

        <ImageView
            android:id="@+id/select_address"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/asset_icon_list"
            android:tint="@color/common_action_text" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:text="@string/asset_asset_activity_withdraw190"
        android:textColor="@color/common_hint"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">


        <EditText
            android:id="@+id/count_edt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10dp"
            android:hint="@string/asset_asset_activity_withdraw230"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/common_text"
            android:textColorHint="@color/common_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="BTC"
            android:textColor="@color/common_dark"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/common_divider" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/asset_assetRecordsActivity1"
            android:textColor="@color/common_action_text"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <TextView
        android:id="@+id/fee_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:text="@string/asset_asset_activity_withdraw300"
        android:textColor="@color/common_hint"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/arrive_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/common_margin"
        android:text="@string/asset_asset_activity_withdraw320"
        android:textColor="@color/common_text"
        android:textSize="17sp" />


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/common_margin"
        android:background="@drawable/common_tip_50"
        android:text="@string/asset_asset_activity_insert_address200"
        android:textColor="@color/common_white" />

</LinearLayout>
