<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical">

    <com.sskj.common.view.ToolBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:background_color="@color/common_action_bar"
        app:right_text="@string/asset_exchange_detail"
        app:right_text_color="@color/common_text"
        app:title="@string/asset_account_transfer"
        app:title_color="@color/common_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        android:padding="16dp"
        android:text="@string/asset_exchange_asset"
        android:textColor="@color/common_text"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/common_white_radius_corner5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_old_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EOS"
                android:textColor="@color/common_text"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_old_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/common_red"
                tools:text="65656.25656" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:tint="@color/common_hint" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/asset_icon_trans" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/common_white_radius_corner5"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_new_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EOS"
                android:textColor="@color/common_text"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_new_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/common_green"
                tools:text="65656.25656" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:tint="@color/common_hint" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        android:padding="16dp"
        android:text="@string/asset_exchange_asset"
        android:textColor="@color/common_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_input_exchange_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/asset_zoom_number_hint"
        android:padding="15dp"
        android:textSize="@dimen/sp_14" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        android:padding="16dp"
        android:text="@string/asset_zoom_number"
        android:textColor="@color/common_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_arrival_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/asset_zoom_daozhang_hint"
        android:padding="15dp"
        android:textSize="@dimen/sp_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/common_divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white"
        android:padding="16dp"
        android:text="@string/asset_amount_pwd"
        android:textColor="@color/common_text"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/et_asset_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/asset_iniput_amount_pwd"
        android:padding="15dp"
        android:textSize="@dimen/sp_14" />


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginBottom="50dp"
        android:background="@drawable/common_tip_50"
        android:text="@string/asset_exchange"
        android:textColor="@color/common_white" />
</LinearLayout>